[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/level_disco/Level/Conductor/Conductor.gd" type="Script" id=1]
[ext_resource path="res://assets/level_disco/art/conductor.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 32 )

[node name="Conductor" type="Node2D"]
script = ExtResource( 1 )

[node name="GoalBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalBox"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="GoalBox"]
position = Vector2( -9.53674e-07, 0 )
scale = Vector2( 0.75, 1 )
texture = ExtResource( 2 )

[node name="NoteTimer" type="Timer" parent="."]
wait_time = 0.7
autostart = true

[node name="Label" type="Label" parent="."]
margin_left = -16.0
margin_top = 40.0
margin_right = 24.0
margin_bottom = 54.0

[connection signal="area_entered" from="GoalBox" to="." method="_on_GoalBox_area_entered"]
[connection signal="area_exited" from="GoalBox" to="." method="_on_GoalBox_area_exited"]
[connection signal="timeout" from="NoteTimer" to="." method="_on_NoteTimer_timeout"]
